# Devrelay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASES.md  SECURITY.md  devrelay-ui-prototype.html  justfile
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: data_safety_bug.md  roadmap_item.md  security_privacy.md
.github/workflows/: ci.yml  fuzz.yml
.playwright-cli/: page-2026-06-23T13-50-14-454Z.yml  page-2026-06-23T13-50-35-440Z.yml
apps/desktop/: .gitignore  AGENTS.md  package-lock.json  package.json
apps/desktop/scripts/: check-event-bridge.mjs  check-feature-status.mjs  check-ui-source.mjs  check-ui-state-authority.mjs  prepare-ui.mjs
apps/desktop/src/: app.css  app.js  index.html
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
apps/vscode-extension/scripts/: lint.mjs
apps/vscode-extension/src/: agentClient.ts  contextCapture.ts  contextRestore.ts  editGuard.ts  extension.ts  status.ts  unsavedBuffers.ts
apps/vscode-extension/test/: agentClient.test.mjs  contextCapture.test.mjs  contextRestore.test.mjs  editGuard.test.mjs  package.test.mjs  status.test.mjs  unsavedBuffers.test.mjs
crates/devrelay-agent/: Cargo.toml
crates/devrelay-agent/src/: main.rs
crates/devrelay-agent/tests/: agent.rs  remote_rpc.rs
crates/devrelay-cli/: Cargo.toml
crates/devrelay-cli/src/: main.rs
crates/devrelay-cli/tests/: cli.rs  remote_cli.rs
crates/devrelay-core/: Cargo.toml
crates/devrelay-core/src/: anchor_snapshot.rs  audit.rs  background_checkpoint.rs  backup_anchor.rs  cas.rs  code_changing_task.rs  config.rs  crash_journal.rs  data_plane.rs  debounce.rs  discovery.rs  environment.rs  environment_doctor.rs  error.rs  events.rs  fs_safety.rs  git.rs  git_doctor.rs  handoff.rs  home.rs  hydration.rs  identity.rs  ipc.rs  lease.rs  lfs.rs  lib.rs  line_ending_doctor.rs  logging.rs  manifest.rs  metrics.rs  nix_delegation.rs  operation_capsule.rs  pairing.rs  path_doctor.rs  platform.rs  policy.rs  remote_credentials.rs  remote_rpc.rs  remote_transport.rs  retention.rs  (+25 more)
crates/devrelay-core/tests/: round_trip.rs  safety.rs
crates/devrelay-core/tests/fixtures/: snapshot_metadata_v1.json  snapshot_metadata_v1_legacy_minimal.json
devrelay_spec_bundle/: devrelay-manifest.schema.json  devrelay.toml  devrelay_north_star_spec_ko.md
docs/: api-surface.md  backup-anchor.md  branching.md  cli.md  compute-fabric.md  current-state.md  data-loss-safety.md  dogfood-scenarios.md  environment-hydration.md  foundation.md  fuzzing.md  glossary.md  identity-rotation.md  install-update.md  local-metrics.md  manual-runtime-checklist.md  manual-verification-runbook.md  migration-rollback-policy.md  north-star-checklist.md  north-star-roadmap.md  opaque-anchor-research.md  recovery-policy.md  release-update-policy.md  remote-rpc-api.md  resource-benchmark.md  rpc-compatibility.md  secret-scanning-design.md  supported-states.md  testing-strategy.md  threat-model.md  ui-vertical-slice.md  unsupported-states.md  user-guide.md  windows-startup.md
docs/decisions/: 0001-rust-core-git-cli.md  0002-agent-state-authority.md  0003-gui-after-core-gates.md  0004-data-plane-local-bare-repo.md  0005-remote-control-rpc-over-mtls.md  ADR_TEMPLATE.md
fuzz/: Cargo.toml
fuzz/corpus/cas_manifest/: empty.json  single_chunk.json
fuzz/corpus/manifest_parser/: commands.toml  minimal.toml
fuzz/corpus/network_api_payload/: checkpoint_create.json  status_get.json
fuzz/corpus/path_canonicalization/: absolute_path  path_escape  relative_path
fuzz/corpus/porcelain_parser/: changed_entry  initial_header  rename_entry
fuzz/fuzz_targets/: cas_manifest.rs  manifest_parser.rs  network_api_payload.rs  path_canonicalization.rs  porcelain_parser.rs
output/: manual-runtime-results-2026-06-23.md  resource-benchmark-dirty-1k-2026-07-02.md  resource-benchmark-formatter-storm-20k-2026-07-02.md  resource-benchmark-idle-0-projects-2026-07-02.md  resource-benchmark-idle-10-projects-2026-07-02.md  resource-benchmark-idle-50-projects-2026-07-02.md  resource-benchmark-representative-2026-07-02.md  resource-benchmark-results-2026-06-24.md
output/playwright/: overflow-check.js
scripts/: dependency_inventory.py  resource_benchmark.py
