[workspace]
members = [
  "crates/devrelay-cli",
  "crates/devrelay-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "UNLICENSED"
authors = ["DevRelay contributors"]

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
thiserror = "2.0"
toml = "0.8"
