[workspace]
members = [
  "crates/devrelay-agent",
  "crates/devrelay-cli",
  "crates/devrelay-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "UNLICENSED"
authors = ["DevRelay contributors"]

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
ed25519-dalek = "2"
getrandom = "0.2"
globset = "0.4"
libc = "0.2"
mdns-sd = "0.20.0"
rcgen = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
thiserror = "2.0"
toml = "0.8"
unicode-normalization = "0.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
