[package]
name = "devrelay-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
devrelay-core = { path = "../crates/devrelay-core" }
libfuzzer-sys = "0.4"

[[bin]]
name = "manifest_parser"
path = "fuzz_targets/manifest_parser.rs"
test = false
doc = false
bench = false

[workspace]
