[package]
name = "devrelay-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
devrelay-core = { path = "../crates/devrelay-core" }
libfuzzer-sys = "0.4"
serde = "1.0"
serde_json = "1.0"

[[bin]]
name = "manifest_parser"
path = "fuzz_targets/manifest_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cas_manifest"
path = "fuzz_targets/cas_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "network_api_payload"
path = "fuzz_targets/network_api_payload.rs"
test = false
doc = false
bench = false

[workspace]
