[package]
name = "devrelay-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "devrelay-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
ctrlc.workspace = true
devrelay-core = { path = "../devrelay-core" }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
