[package]
name = "devrelay-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
entropy-detection = []

[dependencies]
blake3.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
globset.workspace = true
libc.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
x25519-dalek.workspace = true
