[package]
name = "devrelay-desktop"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "UNLICENSED"
authors = ["DevRelay contributors"]

[build-dependencies]
tauri-build = "2"

[dependencies]
devrelay-core = { path = "../../../crates/devrelay-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tauri = { version = "2", features = ["tray-icon"] }
